frontend: Group expressions and annotations (#918)
- add forall and exists expressions